# Live-Shader

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  testrenderer.hpp
SGraphic/Headers/: bigwindow.hpp  camcontroller.hpp  camerawidget.hpp  camerawindow.hpp  configscene.hpp  configuration.hpp  displayedmodellabel.hpp  editorsarea.hpp  editorstabs.hpp  fpcamera.hpp  fragmentshadereditor.hpp  glconsole.hpp  logger.hpp  loggerlistener.hpp  mainframe.hpp  mesh.hpp  model.hpp  nanosuitscene.hpp  objectcontroller.hpp  oglwidget.hpp  oglwindow.hpp  resourceloader.hpp  scene.hpp  scenewidget.hpp  sgraphic.hpp  shader.hpp  shadereditor.hpp  shaderhighlighter.hpp  testwidget.hpp  testwindow.hpp  util.hpp  vertexshadereditor.hpp  worldobject.hpp
SGraphic/Models/laptop/: Lowpoly_Notebook_2.mtl
SGraphic/Shaders/: simple.frag  simple.vert
SGraphic/Sources/: GLConsole.cpp  bigwindow.cpp  camcontroller.cpp  camerawidget.cpp  camerawindow.cpp  configscene.cpp  configuration.cpp  displayedmodellabel.cpp  editorsarea.cpp  editorstabs.cpp  fpcamera.cpp  fragmentshadereditor.cpp  logger.cpp  loggerlistener.cpp  main.cpp  mainframe.cpp  mesh.cpp  model.cpp  nanosuitscene.cpp  objectcontroller.cpp  oglwidget.cpp  oglwindow.cpp  resourceloader.cpp  scene.cpp  scenewidget.cpp  shader.cpp  shadereditor.cpp  shaderhighlighter.cpp  testwidget.cpp  testwindow.cpp  util.cpp  vertexshadereditor.cpp  worldobject.cpp
